--- a/Codigo/Proyecto1/src/main/java/GUI/InterfazInfoCuenta.form
+++ b/Codigo/Proyecto1/src/main/java/GUI/InterfazInfoCuenta.form
@@ -171,27 +171,15 @@
     </Component>
     <Component class="javax.swing.JButton" name="ConsultarCompra">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Consultar compra"/>
+        <Property name="text" type="java.lang.String" value="Consultar Tipo de Cambio"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ConsultarCompraMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ConsultarCompraActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="20" y="190" width="140" height="-1"/>
-        </Constraint>
-      </Constraints>
-    </Component>
-    <Component class="javax.swing.JButton" name="ConsultarVenta">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Consultar venta"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ConsultarVentaActionPerformed"/>
-      </Events>
-      <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="180" y="190" width="170" height="-1"/>
+          <AbsoluteConstraints x="20" y="190" width="330" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
